--- a/.gitignore
+++ b/.gitignore
@@ -2,23 +2,23 @@
 logs
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
+# Dependencies
 node_modules
-dist
+
+# Build output (keep for GitHub Pages)
 dist-ssr
 *.local
 
-# Editor directories and files
+# Python
+.venv
+__pycache__
+*.pyc
+
+# Editor
 .vscode/*
 !.vscode/extensions.json
 .idea
 .DS_Store
 *.suo
-*.ntvs*
-*.njsproj
-*.sln
 *.sw?
